--- a/src/app/web-layout/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/web-layout/dashboard-layout/dashboard-layout.component.html
@@ -1,8 +1,8 @@
 <div class="bg-[#fdfdfd] rounded-xl mt-5">
-    <div class="flex max-w-[1200px] mx-auto">
+    <div class="flex flex-wrap max-w-[1200px] mx-auto">
   <!-- Sidebar -->
-  <aside class="w-64 bg-white rounded-md overflow-hidden shadow-[5px_0_15px_-5px_rgba(0,0,0,0.3)] min-h-[500px]">
-  <ul>
+  <aside class="  pt-2 px-2 flex justify-center md:pt-0 md:px-0 w-full md:w-64  rounded-md overflow-hidden shadow-[5px_0_15px_-5px_rgba(0,0,0,0.3)] md:min-h-[500px]">
+  <ul class="flex md:block rounded-2xl">
     <li
       *ngFor="let item of sidebarMenu"
       routerLinkActive="bg-black text-white"
@@ -21,25 +21,8 @@
     </li>
   </ul>
 </aside>
-  <main class="flex-1 p-6">
+  <main class="flex-1 md:p-6">
     <router-outlet></router-outlet>
-    <!-- <div class="bg-gray-100 border p-3 rounded text-sm text-gray-700 mb-6">
-      🔔 Your account with Comicsense is using a temporary password.
-      We emailed you a link to change your password.
-    </div>
-
-    <div>
-      <p class="text-lg font-medium">
-        Hello <span class="font-bold">Arun Kumar</span> (not <span class="font-bold">Arun Kumar</span>? 
-        <a href="#" class="text-pink-600">Log out</a>)
-      </p>
-      <p class="mt-2">
-        From your account dashboard you can view your
-        <a href="#" class="text-pink-600">recent orders</a>, manage your
-        <a href="#" class="text-pink-600">shipping and billing addresses</a>, and
-        <a href="#" class="text-pink-600">edit your password and account details</a>.
-      </p>
-    </div> -->
   </main>
 </div>
 </div>
